force-app/main/default/objects/End_Point__mdt/End_Point__mdt.object-meta.xml
<CustomObject>
    <description>place for all defined end points used across SF instance</description>
    <label>End Point</label>
    <pluralLabel>End Points</pluralLabel>
</CustomObject>