force-app/main/default/objects/End_Point__mdt/fields/Callout_Type__c.field-meta.xml
<CustomField>
    <fullName>Callout_Type__c</fullName>
    <label>Callout Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SOAP</fullName>
                <default>true</default>
                <label>SOAP</label>
            </value>
            <value>
                <fullName>REST</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>