force-app/main/default/objects/End_Point__mdt/fields/Max_Attempts__c.field-meta.xml
<CustomField>
    <fullName>Max_Attempts__c</fullName>
    <description>Maximum re-tries to integrate</description>
    <label>Max Attempts</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>