force-app/main/default/objects/End_Point__mdt/fields/URL__c.field-meta.xml
<CustomField>
    <fullName>URL__c</fullName>
    <description>End point URL</description>
    <label>URL</label>
    <type>Url</type>
</CustomField>